- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.12
- 
    Ubuntu 18.04 LTS 64 bit
 clang 6.0
I configured current dev branch with
-platform linux-clang -static -developer-build -opensource -confirm-license -nomake examples -nomake tests
Running make then ends with lots of errors like:
/usr/bin/ld.gold: error: /home/qtrob/dev/clang-6.0.0/qt-dev-static/qtbase/plugins/wayland-shell-integration/libxdg-shell.a(qwayland-xdg-shell.o): multiple definition of 'QtWayland::xdg_surface::ack_configure(unsigned int)' /usr/bin/ld.gold: /home/qtrob/dev/clang-6.0.0/qt-dev-static/qtbase/plugins/wayland-shell-integration/libxdg-shell-v5.a(qwayland-xdg-shell-unstable-v5.o): previous definition here
| For Gerrit Dashboard: QTBUG-69896 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 238407,3 | Client: Use customized version of generated files for xdg-shell-v5 | 5.12 | qt/qtwayland | Status: MERGED | +2 | 0 |