src/plugins/shellintegration/xdg-shell-v5/xdg-shell-v5.pro
@@ -6,9 +6,6 @@ QMAKE_USE += wayland-client
 qtConfig(xkbcommon-evdev): \
     QMAKE_USE += xkbcommon_evdev
 
-WAYLANDCLIENTSOURCES += \
-    ../../../3rdparty/protocol/xdg-shell-unstable-v5.xml
-
 HEADERS += \
     qwaylandxdgpopupv5_p.h \
     qwaylandxdgshellv5_p.h \
@@ -21,6 +18,8 @@ SOURCES += \
     qwaylandxdgshellv5.cpp \
     qwaylandxdgshellv5integration.cpp \
     qwaylandxdgsurfacev5.cpp \
+
+include (pregenerated/xdg-shell-v5.pri)
 
 OTHER_FILES += \
     xdg-shell-v5.json
